# AGV_REFACTORING

./: .gitignore  CMakeLists.txt  README.md  build_one_click.bat  build_one_click_issue_summary.md  cmd_run.txt  cpp_code_guide_ko.md  cpp_refactor_plan.md  cpp_refactor_report_ko.md  findings.md  map3_900_16agents_after_global_standstill.txt  map3_900_16agents_fixed.txt  map3_900_16agents_repro.txt  map3_900_16agents_skip_runtime_resolve_full.txt  map3_900_final.txt  map3_900_final_after_limit.txt  map3_900_final_after_mapfix.txt  map3_900_recheck.txt  map3_astar_exit_only.txt  map3_astar_park_after_fix.txt  map3_astar_park_deadlock_deadlock_1_step_10683.txt  map3_astar_park_exit_after_fix.txt  map3_astar_park_exit_deadlock_deadlock_1_step_10683.txt  map3_astar_park_exit_verified.txt  map3_astar_park_false_deadlock_deadlock_1_step_9685.txt  map3_astar_park_false_deadlock_deadlock_2_step_9690.txt  map3_deadlock_after_skip_runtime_resolve_deadlock_1_step_4337.txt  map3_deadlock_probe_deadlock_1_step_1737.txt  map3_deadlock_report_deadlock_1_step_1737.txt  map3_deadlock_stageprobe_deadlock_1_step_1737.txt  map6_default_1000.txt  map6_default_1000_after_fix.txt  map7_algo1_after_fix_deadlock_1_step_2148.txt  map7_algo1_deadlock_deadlock_1_step_2148.txt  map7_default_max_verified.txt  package-lock.json  progress.md  run.ps1  run_one_click.bat  simulation_base_cpp_algorithm_report.md  (+6 more)
.agents/workflows/: agv_legacy_engine_refactor_plan.md  run.md
build-test/: CMakeCache.txt
electron/: README.md  index.html  main.js  motion-runtime.js  package-lock.json  package.json  preload.js  renderer.js  styles.css
electron/scripts/: generate-readme-demo.js  gif-encoder.js
include/agv/: console_shell.hpp  legacy_engine_model.hpp  legacy_sim_bridge.hpp  render_ipc_server.hpp  sim_bridge.hpp  simulation_engine.hpp
include/agv/internal/: console_launch_wizard.hpp  engine_internal.hpp  engine_model.hpp  launch_ui_metadata.hpp  simulation_engine_access.hpp  text_format.hpp
scripts/: codex_build.ps1  codex_build.sh
src/: agv_legacy_console.cpp  agv_legacy_display.cpp  agv_legacy_engine.cpp  agv_legacy_engine_internal.hpp  agv_legacy_maps.cpp  agv_legacy_reports.cpp  simulation_engine.cpp
src/api/: render_ipc_server.cpp  simulation_engine.cpp
src/apps/: console_main.cpp  render_ipc_main.cpp
src/core/: engine_facades.cpp  engine_orchestrator.cpp  simulation_runtime.cpp
src/maps/: map_catalog.cpp
src/planning/: collision_planner.cpp  collision_planner_default_support.cpp  collision_planner_default_support.hpp  collision_planner_support.cpp  collision_planner_support.hpp  collision_planner_whca_support.cpp  collision_planner_whca_support.hpp  pathfinder.cpp
src/platform/: console_terminal.cpp
src/reporting/: debug_support.cpp  run_reporting.cpp
src/runtime/: agent_goal_support.cpp  agent_goal_support.hpp  agent_runtime.cpp  scenario_runtime.cpp  step_runtime.cpp
src/shell/: console_shell.cpp
src/ui/: console_launch_wizard.cpp  launch_ui_metadata.cpp  render_model.cpp  simulation_display.cpp
tests/: core_boundary.cmake  debug_support_test.cpp  launch_workflow_test.cpp  no_c_smells.cmake  render_model_test.cpp  requirements-python-tools.txt  simulation_engine_test.cpp  test_tools.py
tests/support/: analysis_pipeline.py  analyze_results.py  batch_runner.py  benchmark_report.py  golden_compare.py  plot_metrics.py
tmp_build/smoke_cycle1/: run_summary.json
tmp_build/smoke_cycle10/: run_summary.json
tmp_build/smoke_cycle11/: run_summary.json
tmp_build/smoke_cycle12/: run_summary.json
tmp_build/smoke_cycle2/: run_summary.json
tmp_build/smoke_cycle4/: run_summary.json
tmp_build/smoke_cycle5/: run_summary.json
tmp_build/smoke_cycle6/: run_summary.json
tmp_build/smoke_cycle7/: run_summary.json
tmp_build/smoke_cycle8/: run_summary.json
tmp_build/smoke_cycle9/: run_summary.json
tmp_report_check/analysis/: case_summary.csv  manifest.json  step_enriched.csv
tmp_report_check/results/case_default/: run_summary.json
